  - [Jan 6, 00] Added option -ds (default source) to set a default source
    to the persons having no source data.

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [Dec 18, 99] Fixed and completed some Norwegian phrases (Brynjulf
    Langballe)
  - [Dec 17, 99] Fixed and completed some German phrases (Marcus Zelezny)

* Base configuration files (base.gwf)
  - [Dec 17, 99] Added variable "highlight_color", by default #2f6400
    (green), for the color often used in pages.

GeneWeb version 3.01
--------------------

* Languages
  - [Nov 22, 99] Added Finnish (Antti Alfthan)

* Setup program (gwsetup)
  - [Nov 29, 99] Updated French version
  - [Nov 29, 99] Updated German version (Thomas Omerzu)
  - [Nov 7, 99] Fixed problem in Windows version under Netscape: images did
    not appear...

* GeneWeb Service/CGI (gwd)
  - [Dec 2..6, 99] In relationship computing, can print the complete graph
    (all branches in one page). Proposed (when there are no too many links)
    in the list of relationships for each branch type ("click here") and
    globally in links at end of page.
  - [Nov 26, 99] Faster computation of list of all titles and all places
  - [Nov 26, 99] Fixed a problem of sometimes displaying of a message
    "document contains no data" from the browser when computing relationship.
  - [Nov 19, 99] Added ability of customization of the page displayed when
    no data base is given (must make a file etc/index.txt).
  - [Nov 16, 99] Fixed bug: some old dates failed the calendars page
  - [Nov 13, 99] In calendars, display the number of days since ...
  - [Nov 10, 99] Images are now clickable to see them in their true size
  - [Nov 10, 99] Added relationship computing by shortest path (Louis
    Granboulan).
  - [Nov 10, 99] Added foster parents.
  - [Nov 10, 99] Changed structure of data bases for internal optimizations.

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)