@@ -58,6 +58,9 @@ GeneWeb version 3.02
   - [Dec 17, 99] Fixed and completed some German phrases (Marcus Zelezny)
 
 * Base configuration files (base.gwf)
+  - [Jan 10, 00] Added variable "max_cousin", by default 2000, to specify
+    the maximum number of cousins who can be displayed in the cousin
+    page.
   - [Dec 17, 99] Added variable "highlight_color", by default #2f6400
     (green), for the color often used in pages.
 
